Got the tabs working finally

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -341,3 +341,12 @@ input[type="button"]::-moz-focus-inner {
     background-color: #993333;
     color:white;
 }
+
+.tabContent {
+    color:white;
+    display:none;
+    padding:50px;
+    text-align: center;
+}
+
+/*
