made achievement icons

--- a/templates/achievements.html
+++ b/templates/achievements.html
@@ -58,8 +58,8 @@
             <div class="container">
                 <div class="course-points">
                     <div class="average-grade"><strong>Average Grade: 97%</strong></div>
+                </div>
             </div>
-
             <div class="container">
                 <div class="course-points">
                     <div class="overall-q-rank"><strong>Overall Q Rank: 17/9860</strong></div>
@@ -69,8 +69,27 @@
 
         <div class="achievement-things">
             <div class="achievement-conatainer">
-                <div class="course-icons">hello</div>
+                <div class="course-icons">
+                    <img src="../static/img/logo1.jpg" alt="logo1">
+                </div>
             </div>
+            <div class="achievement-conatainer">
+                <div class="course-icons">
+                    <img src="../static/img/logo2.jpg" alt="logo1">
+                </div>
+            </div>
+            <div class="achievement-conatainer">
+                <div class="course-icons">
+                    <img src="../static/img/logo3.jpg" alt="logo1">
+                </div>
+            </div>
+            <div class="achievement-conatainer">
+                <div class="course-icons">
+                    <img src="../static/img/logo4.jpg" alt="logo1">
+                </div>
+            </div>
+
+
         </div>
 
     </div>
