--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -214,29 +214,34 @@ body {
     background-color: #ffd9cc;
 }
 
-/*
+
 .achievement-container{
     width: 50%;
     margin-top: 15px;
-    padding-left: 30px;
-    padding-right: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .course-icons{
     text-align: center;
     font-size: 20px;
-    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    background-color: #ffdb39;
+    padding: 5px;
     text-align: center;
-    width: 380px;
+    width: 300px;
+    height: 300px;
     margin-left: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    border-radius: 10px;
+    
 }
-*/
+
+.course-icons img {
+    width: 60%;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
+}
 
 .both-things{
     display:flex;
@@ -245,12 +250,13 @@ body {
 
 .point-things{
     flex: 1;
-    background-color: lime;
 }
 
 .achievement-things{
     flex: 2;
-    background-color: purple;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 
