--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -1,162 +1,162 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 
 /* ------------ GENERAL PAGE SETTINGS ------------ */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Open Sans", sans-serif;
 }
 
 body {
-    background-image: url("../img/granthall3.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    overflow: hidden;
+	background-image: url("../img/granthall3.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	height: 100vh;
+	overflow: hidden;
 }
 
 /* ------------ HEADER BAR ------------ */
 .topnav {
-    background-color: #993333;
-    overflow: hidden;
+	background-color: #993333;
+	overflow: hidden;
 }
-  
+
 /* Style the links inside the navigation bar */
 .topnav a {
-    float: left;
-    color: #ffffff;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: bold;
+	float: left;
+	color: #ffffff;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 20px;
+	font-weight: bold;
 }
 
 .topnav li h3 {
-    float: right;
-    margin-right: 20px;
-    margin-top: 13px;
+	float: right;
+	margin-right: 20px;
+	margin-top: 13px;
 }
 
 .topnav ul {
-    list-style-type: none;
+	list-style-type: none;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: rgb(94, 94, 94);
-    color: rgb(255, 255, 255);
+	background-color: rgb(94, 94, 94);
+	color: rgb(255, 255, 255);
 }
 
 /* Form container is the div class for login */
 .form-container {
-    width: 35%;
-    margin: auto;
-    height: 100%;
-    margin-top: 100px;
-    border-radius: 7px;
-    padding-top: 200px;
+	width: 35%;
+	margin: auto;
+	height: 100%;
+	margin-top: 100px;
+	border-radius: 7px;
+	padding-top: 200px;
 }
 /* ------------------ LOGIN.HTML ------------------ */
 /* Login field is the class for the two bars users type into */
 #login-header {
-    text-align:center;
-    justify-self: flex-start;
-    margin-bottom: 50px;
-    color:white;
+	text-align: center;
+	justify-self: flex-start;
+	margin-bottom: 50px;
+	color: white;
 }
 
 .login-field {
-    background-color:#ffffffff;
-    font-size: 17px;
-    margin-bottom: 20px;
-    padding: 2%;
-    border-radius: 4px;
-    border:none;
-    width: 50%;
+	background-color: #ffffffff;
+	font-size: 17px;
+	margin-bottom: 20px;
+	padding: 2%;
+	border-radius: 4px;
+	border: none;
+	width: 50%;
 }
 
-.login-field:focus{
-    outline: none;
+.login-field:focus {
+	outline: none;
 }
 /* Login form is the <form> object */
 #login-form {
-    display: grid;
-    align-self:flex-start;
-    justify-items: center;
-    align-items: center;
+	display: grid;
+	align-self: flex-start;
+	justify-items: center;
+	align-items: center;
 }
 
 /* These are the lables on top of the login-form */
 .login-label {
-    color:white;
+	color: white;
 }
 
 /* This is the button that says "NEXT" */
 #login-submit {
-    background-color: #e0b01f;
-    font-size: 17px;
-    width: 20%;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    font-weight: bold;
-    margin-top: 50px;
-    cursor: pointer;
-    outline: none;
+	background-color: #e0b01f;
+	font-size: 17px;
+	width: 20%;
+	padding: 10px;
+	border: none;
+	border-radius: 4px;
+	font-weight: bold;
+	margin-top: 50px;
+	cursor: pointer;
+	outline: none;
 }
 
 /* Code to change the hover properties of the button */
-#login-submit:hover{
-    background-color:#8d6c0a ;
-    color:white;
+#login-submit:hover {
+	background-color: #8d6c0a;
+	color: white;
 }
 
 /* The color of the "login" text in the top right */
 .login-template {
-    color:white;
+	color: white;
 }
 
 /* ------------------ SIGNUP.HTML  ------------------ */
 /* Makes the number buttons not have a up/down arrow */
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
 }
 
 /* Takes away the outline for the input boxes */
-.signup-field:focus{
-    outline: none;
+.signup-field:focus {
+	outline: none;
 }
 
 /* Makes all the labels white */
 .signup-label {
-    color:white;
+	color: white;
 }
 
 /* The CSS for the input boxes */
 .signup-field {
-    background-color:#ffffffff;
-    font-size: 20px;
-    margin-bottom: 20px;
-    padding: 2%;
-    border-radius: 7px;
-    border:none;
-    width: 50%;
+	background-color: #ffffffff;
+	font-size: 20px;
+	margin-bottom: 20px;
+	padding: 2%;
+	border-radius: 7px;
+	border: none;
+	width: 50%;
 }
 
 /* The CSS for aligning all of the objects within the form */
 #signup-form {
-    display: grid;
-    align-self:flex-start;
-    justify-items: center;
-    align-items: center;
-    width: 35%;
-    margin: auto;
-    height: 100%;
-    margin-top: 20px;
-    padding-top: 100px;
+	display: grid;
+	align-self: flex-start;
+	justify-items: center;
+	align-items: center;
+	width: 35%;
+	margin: auto;
+	height: 100%;
+	margin-top: 20px;
+	padding-top: 100px;
 }
