--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QScores: Gameify School!</title>
+    <title>QScores: Gamify School!</title>
     <link rel="stylesheet" href="../static/styles/home.css">
 </head>
 
